doc: Update cn2 tutorial

--- a/docs-src/source/tutorials/cn2.ipynb
+++ b/docs-src/source/tutorials/cn2.ipynb
@@ -13,8 +13,9 @@
     "* programmatic creation of decision rule sets.\n",
     "\n",
     "We will use the implementation of the CN2 algorithm provided by the [Orange](https://orange3.readthedocs.io/projects/orange-data-mining-library/en/latest/) package. In this tutorial\n",
-    "we will use the popular [titanic](https://www.kaggle.com/c/titanic/data) dataset. Later, we will write a custom rule set factory class that will transform an instance of the Orange rule set to an instance of \n",
-    "the `decision_rules.classification.ClassificationRuleSet` class. At Finally, we will briefly introduce the various operations that can be performed using such an object.\n",
+    "we will use the popular [titanic](https://www.kaggle.com/c/titanic/data) dataset. Later, we will write a custom rule set factory class that will transform an instance of the Orange rule set to an instance of the `decision_rules.classification.ClassificationRuleSet` class. Finally, we will briefly introduce the various operations that can be performed using such an object. \n",
+    "\n",
+    "Custom classes and methods presented in tutorial are already implemented and available in the **decision-rules** package, but this tutorial will teach you how to implement them yourself. This knowledge will enable you to add your own custom factories, quality measures, or prediction strategies in the future if needed.\n",
     "\n",
     "We will start by loading the [titanic](https://www.kaggle.com/c/titanic/data) dataset. We \n",
     "will use the `submodule` of Orange data here."
@@ -497,7 +498,7 @@
     "dataset and a quality measure to calculate the quality of the rules used later to resolve conflicts during prediction.\n",
     "\n",
     "The Orange CN2 algorithm uses a confidence quality measure to resolve conflicts during prediction.\n",
-    "Decision rules do not provide such a measure, but it is very easy to write your own implementation.\n",
+    "The **decision-rules** package already provides a built-in implementation of this measure, but in this section, we will demonstrate how you can easily define your own custom measure. This is useful for extending the functionality or tailoring it to specific needs.\n",
     "Below we can see the equation for calculating confidence based on the confusion matrix.\n",
     "```text\n",
     "\n",
@@ -583,11 +584,9 @@
     "are resolved in the CN2 algorithm. Instead of conducting a vote, it selects the first rule from a set of rules that\n",
     "that covers the given examples and uses it to get the predicted value. \n",
     "\n",
-    "Decision-rules package provides us with two prediction strategies: `vote` and `best_rule`. The first one we've already\n",
+    "Decision-rules package provides us with three prediction strategies: `vote` and `best_rule`, `first_rule` . The first one we've already\n",
     "discussed. The second one select the rule with the highest quality from all the rules covering\n",
-    "given examples and use it to predict for this example. Unfortunately, none of these already existing \n",
-    "strategies fit our case. In this example, we will demonstrate how easily we can write our own custom \n",
-    "prediction strategy that does exactly the same thing as our original algorithm.\n",
+    "given examples and use it to predict for this example. While the package includes a ready-to-use `FirstRuleCoveringStrategy` that does exactly the same thing as our original algorithm, we will write it from scratch to demonstrate how prediction strategies can be easily implemented and extended.\n",
     "\n",
     "To implement our own prediction strategy we need to write a class inheriting from `decision_rules.core.prediction.PredictionStrategy`\n",
     "class. It have to implement a single method `_perform_prediction` (and optionally overwrite others). This method takes a single\n",
@@ -609,15 +608,16 @@
     "class FirstRuleCoveringStrategy(PredictionStrategy):\n",
     "\n",
     "    def _perform_prediction(self, voting_matrix: np.ndarray) -> np.ndarray:\n",
+    "        coverage_matrix = self.coverage_matrix\n",
     "        predictions = np.array(\n",
     "            [\n",
     "                self.rules[i].conclusion.value\n",
     "                # numpy argmax will return first occurence of the maximum\n",
-    "                for i in voting_matrix.argmax(axis=1)\n",
+    "                for i in coverage_matrix.argmax(axis=1)\n",
     "            ]\n",
     "        )\n",
     "        # we need to handle examples uncovered by any rule using default rule/conclusion\n",
-    "        predictions[voting_matrix.sum(axis=1) == 0] = self.default_conclusion.value\n",
+    "        predictions[coverage_matrix.sum(axis=1) == 0] = self.default_conclusion.value\n",
     "        return predictions"
    ]
   },
@@ -663,7 +663,7 @@
     "Finally we achieved the same predictions. \n",
     "\n",
     "This example showed us how the decision rule package can be used with different rule induction algorithms.\n",
-    "Rule induction algorithm. Even if it does not implement all possible prediction mechanisms\n",
+    "Even if it does not implement all possible prediction mechanisms\n",
     "we can easily extend it to fit many different cases."
    ]
   }
